libraries/ckit/regression/valid-programs/a23.c
struct X;

main () {
  struct X {
    int y;
  };

 return 0;
}




